tests/error/negative_array2.gw
#! [contains] ArrayOutofBounds
var int i[2][2];
<<< i[1][-1] >>>;
